--- a/css/global.css
+++ b/css/global.css
@@ -4,7 +4,8 @@ body {
   font-size: 14px;
   border-radius: 5px;
   min-height: 200px;
-  overflow: hidden;
+  overflow-y: auto;
+  overflow-x: auto;
   background-color: #ffc0382e;
 }
 
@@ -50,19 +51,19 @@ h5 {
 }
 
 #itemsSection {
-  overflow-y: scroll;
+  overflow-y: auto;
   overflow-x: hidden;
   height: 270px;
   width: 90%;
 }
-#aliases::-webkit-scrollbar {
+#groupsSection::-webkit-scrollbar {
   width: 10px;
   background-color: #f5f5f5;
 }
-#aliases::-webkit-scrollbar-thumb {
+#groupsSection::-webkit-scrollbar-thumb {
   border-radius: 10px;
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  background-color: #5cb85c;
+  background-color: #b8b30f;
 }
 .alias {
   border-color: #35b1ea;
@@ -104,6 +105,7 @@ h5 {
 #middleSection {
   display: flex;
   flex-direction: row;
+  height:320px;
 }
 #new_alias {
   margin-top: 25px;
